@@ -1460,6 +1460,7 @@ pm-bitumen-to-crude-oil=Bitumen to crude oil
 pm-tantalum-advanced-electric-engine-unit=Tantalum advanced electric engine unit
 pm-niobium-advanced-electric-engine-unit=Niobium advanced electric engine unit
 pm-steam-condensation=Steam condensation
+pm-light-lube-solar-cell=Light lubricant solar cell
 
 pm-liquid-brass=Molten brass alloying
 pm-liquid-steel=Molten steel alloying
